# obuchaushchee-veb-prilojenie-binarnoe-otnoshenie

./: .gitignore  CMakeLists.txt  README.md  go.mod  index.html
DesktopApp/: CMakeLists.txt
DesktopApp/DesktopApp/: CMakeLists.txt  DesktopApp.cpp  DesktopApp.h
TGUI/: CMakeLists.txt  changelog.md
TGUI/.github/workflows/: ci.yml
TGUI/doc/: doxyfile.in
TGUI/doc/html/: _absolute_or_relative_value_8hpp_source.html  _all_widgets_8hpp_source.html  _animation_8hpp_source.html  _any_8hpp_source.html  _backend_8hpp_source.html  _backend_font_8hpp_source.html  _backend_font_factory_8hpp_source.html  _backend_font_free_type_8hpp_source.html  _backend_font_raylib_8hpp_source.html  _backend_font_s_d_lttf_8hpp_source.html  _backend_font_s_f_m_l_8hpp_source.html  _backend_g_l_f_w_8hpp_source.html  _backend_gui_8hpp_source.html  _backend_gui_g_l_f_w_8hpp_source.html  _backend_gui_raylib_8hpp_source.html  _backend_gui_s_d_l_8hpp_source.html  _backend_gui_s_f_m_l_8hpp_source.html  _backend_raylib_8hpp_source.html  _backend_render_target_8hpp_source.html  _backend_render_target_g_l_e_s2_8hpp_source.html  _backend_render_target_open_g_l3_8hpp_source.html  _backend_render_target_raylib_8hpp_source.html  _backend_render_target_s_d_l_8hpp_source.html  _backend_render_target_s_d_l_g_p_u_8hpp_source.html  _backend_render_target_s_f_m_l_8hpp_source.html  _backend_renderer_8hpp_source.html  _backend_renderer_g_l_e_s2_8hpp_source.html  _backend_renderer_open_g_l3_8hpp_source.html  _backend_renderer_raylib_8hpp_source.html  _backend_renderer_s_d_l_8hpp_source.html  _backend_renderer_s_d_l_g_p_u_8hpp_source.html  _backend_renderer_s_f_m_l_8hpp_source.html  _backend_s_d_l_8hpp_source.html  _backend_s_f_m_l_8hpp_source.html  _backend_text_8hpp_source.html  _backend_texture_8hpp_source.html  _backend_texture_g_l_e_s2_8hpp_source.html  _backend_texture_open_g_l3_8hpp_source.html  _backend_texture_raylib_8hpp_source.html  _backend_texture_s_d_l_8hpp_source.html  (+717 more)
TGUI/examples/: main-SDL_GLES2.cpp  main-SDL_GPU.cpp  main-SDL_OPENGL3.cpp  main-SDL_RENDERER.cpp  main-SDL_TTF_GLES2.cpp  main-SDL_TTF_OPENGL3.cpp
TGUI/gui-builder/src/: GuiBuilder.cpp
TGUI/include/TGUI/: Config.hpp  Config.hpp.in
TGUI/lib/: tgui-d.lib  tgui.lib
TGUI/src/: CMakeLists.txt  DefaultBackendWindow.cpp  Signal.cpp  TGUI-Main-Module.cppm.in  TGUI-Module.cppm.in  Text.cpp  Transform.cpp
TGUI/src/Backend/: CMakeLists.txt  SDL-GPU.cpp
TGUI/src/Loading/: Serializer.cpp
TGUI/src/Widgets/: ListView.cpp  RichTextLabel.cpp  TreeView.cpp
TGUI/tests/: Clipping.cpp  Tests.cpp  Tests.hpp  Widget.cpp  main.cpp
TGUI/tests/Widgets/: Canvas.cpp  RichTextLabel.cpp
api/: auth.go  go.mod  go.sum  main.go
api/internal/handler/: test_handler.go
api/internal/models/: models.go  test.go
api/models/: models.go
app/: main.go  stats.json
app/templates/: admin.html  course.html  courses.html  coursesteacher.html  createtest.html  index.html  marks.html  marksteacher.html  notifications.html  profile.html  profile2.html  profileteacher.html  test.html  testtrainer.html  trainer.html  view.html
css/: style.css
desktop/: CMakeLists.txt
desktop/src/: main.cpp
internal/app/: app.go
js/: script.js
mainapp/: main.go
src/: GUI.cpp  GUI.h  main.cpp
tests-service/: go.mod  main.go
(+71 files in other folders)
